feat(v1.0.0):
初始化分支信息